<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="explore"><b><u>Explore</u></b></string>
    <string name="launches">Launches</string>
    <string name="launchpads">Launchpads</string>
    <string name="landpads">Landpads</string>
    <string name="rockets">Rockets</string>
    <string name="roadster">Roadster</string>
    <string name="ships">Ships</string>
    <string name="go">Go</string>
    <string name="textview">TextView</string>
</resources>